@@ -27,10 +27,13 @@ depth: 1
 
 ### Maintenance
 
- * Maintenance: Update djhtml (html formatting) library to v 1.5.2 (Loveth Omokaro)
- * Maintenance: Re-enable `strictPropertyInitialization` in tsconfig (Thibaud Colas)
- * Maintenance: Refactor accessibility checker userbar item (Albina Starykova)
+ * Update djhtml (html formatting) library to v 1.5.2 (Loveth Omokaro)
+ * Re-enable `strictPropertyInitialization` in tsconfig (Thibaud Colas)
+ * Refactor accessibility checker userbar item (Albina Starykova)
+ * Removed unused `Page.get_static_site_paths` method (Yosr Karoui)
 
 ## Upgrade considerations
 
-### ...
+### `Page.get_static_site_paths` method removed
+
+The undocumented `Page.get_static_site_paths` method (which returns a generator of URL paths for use by static site generator packages) has been removed. Packages relying on this functionality should provide their own fallback implementation.
